--- a/app/views/activejob_web/jobs/index.html.erb
+++ b/app/views/activejob_web/jobs/index.html.erb
@@ -11,7 +11,7 @@
   </tr>
   </thead>
   <tbody>
-  <% @activejob_web_jobs.each do |job| %>
+  <% @jobs.each do |job| %>
     <tr>
       <td><%= job.title %></td>
       <td><%= job.description %></td>
