--- a/app/views/activejob_web/jobs/edit.html.erb
+++ b/app/views/activejob_web/jobs/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Job</h1>
+<h1>Job: <%= @job.title %></h1>
 
 <%= form_with model: @job do |form| %>
   <% if @job.errors.any? %>
@@ -7,14 +7,42 @@
     <% end %>
   <% end %>
 
-  <div class="field">
-    <%= form.label :job_approvers %>
-    <%= form.select :job_approvers, options_for_select(Activejob::Web.job_approvers_class.to_s.constantize.pluck(:name, :id)), { }, { class: 'form-control input-sm', data: { behavior: 'select2-ajax', source: 'job_approvers' }, placeholder: 'Job Approvers' } %>
+  <div>
+    <% @job.approvers %>
+      <h3>Assigned approvers for <%= @job.title %></h3>
+      <ul>
+    <% if @job.approvers.any? %>
+    <% @job.approvers.each do |assigned| %>
+            <li><%= assigned.name %></li>
+    <% end %>
+    <% else %>
+    <%= 'No approvers assigned' %>
+    <% end %>
+      </ul>
+  </div>
+
+  <div>
+    <% @job.executors %>
+      <h3>Assigned executors for <%= @job.title %></h3>
+      <ul>
+    <% if @job.executors.any? %>
+    <% @job.executors.each do |assigned| %>
+            <li><%= assigned.name %></li>
+    <% end %>
+    <% else %>
+    <%= 'No executors assigned' %>
+    <% end %>
+      </ul>
+  </div>
+
+  <div>
+    <%= form.label :approvers %>
+    <%= form.select :approvers, options_for_select(Activejob::Web.job_approvers_class.to_s.constantize.pluck(:name, :id)), { }, placeholder: 'Job Approvers' %>
   </div><br>
 
-  <div class="field">
-    <%= form.label :job_executors %>
-    <%= form.select :job_executors, options_for_select(Activejob::Web.job_executors_class.to_s.constantize.pluck(:name, :id)), { }, { class: 'form-control input-sm', data: { behavior: 'select2-ajax', source: 'job_executors' }, placeholder: 'Job Executors' } %>
+  <div>
+    <%= form.label :executors %>
+    <%= form.select :executors, options_for_select(Activejob::Web.job_executors_class.to_s.constantize.pluck(:name, :id)), { }, placeholder: 'Job Executors' %>
   </div><br>
-  <%= form.submit %>
+  <div><%= form.submit %></div>
 <% end %>
