--- a/app/views/activejob_web/jobs/edit.html.erb
+++ b/app/views/activejob_web/jobs/edit.html.erb
@@ -8,41 +8,40 @@
   <% end %>
 
   <div>
-    <% @job.approvers %>
-      <h3>Assigned approvers for <%= @job.title %></h3>
-      <ul>
-    <% if @job.approvers.any? %>
-    <% @job.approvers.each do |assigned| %>
-            <li><%= assigned.name %></li>
-    <% end %>
-    <% else %>
-    <%= 'No approvers assigned' %>
-    <% end %>
-      </ul>
+    <h3>Assigned approvers for <%= @job.title %></h3>
+    <ul>
+      <% if @job.approvers.length > 0 %>
+        <% @job.approvers.each do |assigned| %>
+          <li><%= assigned.name %></li>
+        <% end %>
+      <% else %>
+        <%= 'No approvers assigned' %>
+      <% end %>
+    </ul>
   </div>
 
   <div>
-    <% @job.executors %>
-      <h3>Assigned executors for <%= @job.title %></h3>
-      <ul>
-    <% if @job.executors.any? %>
-    <% @job.executors.each do |assigned| %>
-            <li><%= assigned.name %></li>
-    <% end %>
-    <% else %>
-    <%= 'No executors assigned' %>
-    <% end %>
-      </ul>
+    <h3>Assigned executors for <%= @job.title %></h3>
+    <ul>
+      <% if @job.executors.length > 0 %>
+        <% @job.executors.each do |assigned| %>
+          <li><%= assigned.name %></li>
+        <% end %>
+      <% else %>
+        <%= 'No executors assigned' %>
+      <% end %>
+    </ul>
   </div>
 
+  <% users = Activejob::Web.job_approvers_class.to_s.constantize.all %>
   <div>
     <%= form.label :approvers %>
-    <%= form.collection_select(:approver_ids, Activejob::Web.job_approvers_class.to_s.constantize.all, :id, :name, { multiple: true }) %>
+    <%= form.collection_select(:approver_ids, users, :id, :name, { multiple: true }) %>
   </div><br>
 
   <div>
     <%= form.label :executors %>
-    <%= form.collection_select(:executor_ids, Activejob::Web.job_approvers_class.to_s.constantize.all, :id, :name, {}, { multiple: true }) %>
+    <%= form.collection_select(:executor_ids, users, :id, :name, {}, { multiple: true }) %>
   </div><br>
   <div><%= form.submit %></div>
 <% end %>
