--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dummy</title>
+    <title>Activejob Web Gem</title>
+    <div>
+      <% if user_signed_in? %>
+        <a>Signed in as : <%= current_user.email %></a>
+        <%= link_to 'Edit Profile', edit_user_registration_path %>
+        <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% else %>
+        <a>Not signed in</a>
+      <% end %>
+    </div>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
