--- a/app/views/activejob_web/jobs/index.html.erb
+++ b/app/views/activejob_web/jobs/index.html.erb
@@ -18,6 +18,7 @@
       <td><%= job.id %></td>
       <td><%= job.queue %></td>
       <td><%= link_to 'Show', activejob_web_job_path(job) %></td>
+<!--      <td><%#= link_to 'job executions', activejob_web_job_job_executions_path(job) %></td>-->
     </tr>
   <% end %>
   </tbody>
