--- a/app/views/activejob_web/jobs/show.html.erb
+++ b/app/views/activejob_web/jobs/show.html.erb
@@ -12,3 +12,4 @@
   <p>no template available</p>
 <% end %>
 <%= link_to 'Back', activejob_web_jobs_path %>
+<td><%= link_to 'job executions', activejob_web_job_job_executions_path(@job) %></td>
