--- a/app/views/activejob_web/job_executions/show.html.erb
+++ b/app/views/activejob_web/job_executions/show.html.erb
@@ -3,10 +3,12 @@
 <p><strong>ID:</strong> <%= @job_execution.id %></p>
 <p><strong>Status:</strong> <%= @job_execution.status %></p>
 <p><strong>Requestor Comments:</strong> <%= @job_execution.requestor_comments %></p>
+<p><strong>Auto_execute_on_approval:</strong> <%= @job_execution.auto_execute_on_approval %></p>
 <p><strong>Reason for Failure:</strong> <%= @job_execution.reason_for_failure %></p>
+<p><strong>Arguments:</strong><%= @job_execution.arguments %></p>
 <p><strong>Auto Execute on Approval:</strong> <%= @job_execution.auto_execute_on_approval %></p>
 <p><strong>Run At:</strong> <%= @job_execution.run_at %></p>
 <p><strong>Execution Started At:</strong> <%= @job_execution.execution_started_at %></p>
 
-<%= link_to 'Edit', edit_job_execution_path(@job_execution) %> |
-<%= link_to 'Back', job_executions_path %>
+<%= link_to 'Edit', edit_activejob_web_job_job_execution_path(@job,@job_execution) %> |
+<%= link_to 'Back',activejob_web_job_job_executions_path %>
