--- a/app/views/activejob_web/job_approval_requests/index.html.erb
+++ b/app/views/activejob_web/job_approval_requests/index.html.erb
@@ -1,14 +1,16 @@
-<h1>Jobs Waiting for Approval Request</h1>
 <% if flash[:notice] %>
   <div style="background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; padding: 15px; margin-bottom: 15px;">
     <%= flash[:notice] %>
   </div>
 <% end %>
+<h1>Jobs Waiting for Approval Request</h1>
+<b>Approver Name: </b><%= current_user.name %>
 <table>
   <thead>
     <tr>
       <th>Job title</th>
       <th>Requestor name</th>
+      <th>Status</th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -17,7 +19,8 @@
       <tr>
         <td><%= approval_request.job_execution.job.title %></td>
         <td><%= approval_request.job_execution.user.name %></td>
-        <td><%= button_to 'Approve/Decline', action_activejob_web_job_job_execution_job_approval_request_path(approval_request.job_execution.job, approval_request.job_execution, approval_request), method: :get %></td>
+        <td><%= approval_request.response.nil? ? 'nil' : (approval_request.response == 1 ? 'Approved' : 'Declined') %></td>
+        <td><%= button_to 'Approve/Decline', action_activejob_web_job_job_execution_job_approval_request_path(approval_request.job_execution.job, approval_request.job_execution, approval_request), method: :get if approval_request.response.nil? %></td>
       </tr>
     <% end %>
   </tbody>
