--- a/app/views/activejob_web/job_executions/show.html.erb
+++ b/app/views/activejob_web/job_executions/show.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:notice] %>
+  <div style="background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; padding: 15px; margin-bottom: 15px;">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
 <h1>Job Execution Details</h1>
 
 <p><strong>ID:</strong> <%= @job_execution.id %></p>
@@ -13,3 +18,9 @@
 <%= link_to 'Edit', edit_activejob_web_job_job_execution_path(@job,@job_execution) %> |
 <%= link_to 'Back', activejob_web_job_job_executions_path %>
 <%= link_to 'Job_approval_requests',activejob_web_job_job_execution_job_approval_requests_path(@job, @job_execution, @job_approval_requests)  %>
+<% if @cancel_job_exec_status == true %>
+  <%= button_to 'Cancel Job Execution', cancel_activejob_web_job_job_execution_path(@job, @job_execution), method: :patch, onclick: "return confirm('Are you sure you want to cancel this job execution?');" %>
+<% end %>
+<% if @job_execution.status == 'cancelled' %>
+  <%= button_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');"  %>
+<% end %>
