--- a/app/views/activejob_web/jobs/show.html.erb
+++ b/app/views/activejob_web/jobs/show.html.erb
@@ -3,7 +3,7 @@
     <%= flash[:notice] %>
   </div>
 <% end %>
-<% if Activejob::Web.job_approvers_class.constantize.super_admin_user.include?(current_user) %>
+<% if Activejob::Web.job_approvers_class.constantize.super_admin_user.include?(job_current_user) %>
   <div>
     <h3>Assigned approvers for <%= @job.title %></h3>
     <ul>
