Update the readme file and create a mock for the current user in the test cases

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Activejob Web Gem</title>
     <div>
-      <a>Signed in as : <%= job_current_user.email %></a>
+      <a>Signed in as : <%= activejob_web_current_user.email %></a>
     </div>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
