Update custom authentication changes

--- a/app/views/activejob_web/jobs/show.html.erb
+++ b/app/views/activejob_web/jobs/show.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:notice] %>
+  <div style="background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; padding: 15px; margin-bottom: 15px;">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
 <h1><%= @job.title %></h1>
 
 <p><strong>Description:</strong> <%= @job.description %></p>
@@ -11,12 +16,7 @@
 <% else %>
   <p>no template available</p>
 <% end %>
-<% if flash[:notice] %>
-  <div style="background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; padding: 15px; margin-bottom: 15px;">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
-<% if Activejob::Web.job_approvers_class.constantize.super_admin_user.include?(current_user) %>
+<% if Activejob::Web.job_approvers_class.constantize.super_admin_users.include?(activejob_web_current_user) %>
   <div>
     <h3>Assigned approvers for <%= @job.title %></h3>
     <ul>
