--- a/app/views/activejob_web/jobs/edit.html.erb
+++ b/app/views/activejob_web/jobs/edit.html.erb
@@ -10,8 +10,8 @@
   <div>
     <h3>Assigned approvers for <%= @job.title %></h3>
     <ul>
-      <% if @job.approvers.length > 0 %>
-        <% @job.approvers.each do |assigned| %>
+      <% if @job_approvers.length > 0 %>
+        <% @job_approvers.each do |assigned| %>
           <li><%= assigned.name %></li>
         <% end %>
       <% else %>
@@ -23,8 +23,8 @@
   <div>
     <h3>Assigned executors for <%= @job.title %></h3>
     <ul>
-      <% if @job.executors.length > 0 %>
-        <% @job.executors.each do |assigned| %>
+      <% if @job_executors.length > 0 %>
+        <% @job_executors.each do |assigned| %>
           <li><%= assigned.name %></li>
         <% end %>
       <% else %>
@@ -33,15 +33,14 @@
     </ul>
   </div>
 
-  <% users = Activejob::Web.job_approvers_class.to_s.constantize.all %>
   <div>
     <%= form.label :approvers %>
-    <%= form.collection_select(:approver_ids, users, :id, :name, { multiple: true }) %>
+    <%= form.collection_select(:approver_ids, @all_job_approvers, :id, :name, { multiple: true }) %>
   </div><br>
 
   <div>
     <%= form.label :executors %>
-    <%= form.collection_select(:executor_ids, users, :id, :name, {}, { multiple: true }) %>
+    <%= form.collection_select(:executor_ids, @all_job_executors, :id, :name, {}, { multiple: true }) %>
   </div><br>
   <div><%= form.submit %></div>
 <% end %>
