--- a/app/views/activejob_web/jobs/show.html.erb
+++ b/app/views/activejob_web/jobs/show.html.erb
@@ -7,8 +7,8 @@
   <div>
     <h3>Assigned approvers for <%= @job.title %></h3>
     <ul>
-      <% if @job.approvers.length > 0 %>
-        <% @job.approvers.each do |assigned| %>
+      <% if @job_approvers.length > 0 %>
+        <% @job_approvers.each do |assigned| %>
           <li><%= assigned.name %></li>
         <% end %>
       <% else %>
@@ -20,8 +20,8 @@
   <div>
     <h3>Assigned executors for <%= @job.title %></h3>
     <ul>
-      <% if @job.executors.length > 0 %>
-        <% @job.executors.each do |assigned| %>
+      <% if @job_executors.length > 0 %>
+        <% @job_executors.each do |assigned| %>
           <li><%= assigned.name %></li>
         <% end %>
       <% else %>
