Issue-6: Update the gemspec with github uri and some changes in jobs controller

--- a/app/views/activejob_web/jobs/edit.html.erb
+++ b/app/views/activejob_web/jobs/edit.html.erb
@@ -8,11 +8,11 @@
   <% end %>
 
   <div>
-    <h3>Assigned approvers for <%= @job.title %></h3>
+    <h3>Assigned approvers</h3>
     <ul>
       <% if @job_approvers.length > 0 %>
-        <% @job_approvers.each do |assigned| %>
-          <li><%= assigned.name %></li>
+        <% @job_approvers.each do |approver| %>
+          <li><%= approver.name %></li>
         <% end %>
       <% else %>
         <%= 'No approvers assigned' %>
@@ -21,11 +21,11 @@
   </div>
 
   <div>
-    <h3>Assigned executors for <%= @job.title %></h3>
+    <h3>Assigned executors</h3>
     <ul>
       <% if @job_executors.length > 0 %>
-        <% @job_executors.each do |assigned| %>
-          <li><%= assigned.name %></li>
+        <% @job_executors.each do |executor| %>
+          <li><%= executor.name %></li>
         <% end %>
       <% else %>
         <%= 'No executors assigned' %>
