--- a/app/views/activejob/web/jobs/index.html.erb
+++ b/app/views/activejob/web/jobs/index.html.erb
@@ -40,46 +40,10 @@
     </div>
   </div>
 
-  <div class="row mt-3 p-3">
-    <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
-      <div class="card h-100">
-        <div class="card-header pb-0 p-3">
-          <div class="row">
-            <div class="col-md-8 d-flex align-items-center">
-              <h3 class="mb-3">Activejob Web Jobs</h3>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-          <% if @jobs.present? %>
-          <table class="table">
-            <thead>
-            <tr>
-              <th scope="col">Title</th>
-              <th scope="col">Description</th>
-              <th scope="col">ID</th>
-              <th scope="col">Queue</th>
-              <th scope="col">Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <% @jobs.each do |job| %>
-              <tr>
-                <td><%= job.title %></td>
-                <td><%= job.description %></td>
-                <td><%= job.id %></td>
-                <td><%= job.queue %></td>
-                <td><%= link_to 'Show', activejob_web_job_path(job), class: 'btn btn-outline-primary' %></td>
-              </tr>
-            <% end %>
-            </tbody>
-          </table>
-            <% else %>
-          <p> No jobs available.</p>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
+  <% if common_model? %>
+    <%= render partial: 'activejob/web/jobs/common_user_index', locals: { approval_jobs: @approval_jobs, execution_jobs: @execution_jobs } %>
+  <% else %>
+    <%= render partial: 'activejob/web/jobs/common_index', locals: { jobs: @jobs, title: 'Activejob Web Jobs' } %>
+  <% end %>
 </div>
 
