--- a/app/views/activejob/web/job_executions/show.html.erb
+++ b/app/views/activejob/web/job_executions/show.html.erb
@@ -86,13 +86,6 @@
           <div class="col-sm-9"><%= @job_execution.reason_for_failure || '-' %></div>
         </div>
 
-        <% if @job_execution.input_file.attached? %>
-          <div class="mb-3 row">
-            <div class="col-sm-3"><strong class="text-dark">File:</strong></div>
-            <a href="<%= @job_execution.input_file.url %>" class="col-sm-9" target="_blank"><%= @job_execution.input_file.blob.filename %></a>
-          </div>
-        <% end %>
-
         <div class="mb-3 row">
           <div class="col-sm-3"><strong class="text-dark">Arguments:</strong></div>
           <div class="col-sm-9">
@@ -108,6 +101,16 @@
                       </tr>
                       </thead>
                       <tbody>
+                      <% if @job_execution.input_file.attached? %>
+                        <tr>
+                          <td>
+                            <p class="font-14 my-1 fw-normal">File</p>
+                          </td>
+                          <td>
+                            <a href="<%= @job_execution.input_file.url %>" class="font-14 my-1 fw-normal" target="_blank"><%= @job_execution.input_file.blob.filename %></a>
+                          </td>
+                        </tr>
+                      <% end %>
                       <% @job_execution.arguments.each do |argument| %>
                         <tr>
                           <td>
