Implemented auto-execution of jobs upon meeting required approvals

--- a/app/views/activejob/web/job_executions/show.html.erb
+++ b/app/views/activejob/web/job_executions/show.html.erb
@@ -42,16 +42,21 @@
     <div class="card h-100">
       <div class="card-header pb-0 p-3">
         <div class="row">
-          <div class="col-md-8 d-flex align-items-center">
+          <div class="col-md-4 d-flex align-items-center">
             <h3 class="mb-3">Job Execution Details</h3>
           </div>
-          <div class="col-md-4 text-end mt-1">
-            <% if @job_execution.cancel_execution %>
-              <%= button_to 'Cancel Job Execution', cancel_activejob_web_job_job_execution_path(@job, @job_execution), method: :patch, onclick: "return confirm('Are you sure you want to cancel this job execution?');", class: 'btn btn-outline-danger' %>
-            <% end %>
-            <% if @job_execution.cancelled? %>
-              <%= button_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');", class: 'btn btn-outline-primary'  %>
-            <% end %>
+          <div class="col-md-8 mt-1">
+            <div class="d-flex" style="float: right">
+              <% if @job_execution.approved? %>
+                <%= button_to 'Run Job Execution', execute_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, onclick: "return confirm('Are you sure you want to run this job execution?');", class: 'btn btn-outline-success', style: 'margin-right: 5px' %>
+              <% end %>
+              <% if @job_execution.cancel_execution %>
+                <%= button_to 'Cancel Job Execution', cancel_activejob_web_job_job_execution_path(@job, @job_execution), method: :patch, onclick: "return confirm('Are you sure you want to cancel this job execution?');", class: 'btn btn-outline-danger mr-2', style: 'margin-right: 5px' %>
+              <% end %>
+              <% if @job_execution.cancelled? %>
+                <%= button_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');", class: 'btn btn-outline-primary'  %>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
