Removed signed_in_as helper

--- a/app/views/activejob/web/shared/_navbar.html.erb
+++ b/app/views/activejob/web/shared/_navbar.html.erb
@@ -11,7 +11,8 @@
         </li>
       </ul>
       <form class="d-flex" >
-        Signed in As: <%= @activejob_web_current_user.email %> ( <%= signed_in_as %> )
+        Signed in As: <%= @activejob_web_current_user.email %>
+<!--        Signed in As: <%#= @activejob_web_current_user.email %> ( <%#= signed_in_as %> )-->
       </form>
     </div>
   </div>
