--- a/app/views/activejob/web/job_executions/show.html.erb
+++ b/app/views/activejob/web/job_executions/show.html.erb
@@ -24,26 +24,26 @@
       <div class="card-body p-3">
         <table class="table">
           <% if @job_approval_requests.present? %>
-          <thead>
-          <tr>
-            <th scope="col">Approver Name</th>
-            <th scope="col">Approver Email</th>
-            <th scope="col">Response</th>
-            <th scope="col">Comments</th>
-          </tr>
-          </thead>
-          <tbody>
-          <% @job_approval_requests.each do |approval_request| %>
+            <thead>
             <tr>
-              <td><%= approval_request.approver&.name || '-' %></td>
-              <td><%= approval_request.approver.email %></td>
-              <td><span class="badge text-bg-<%= status_badge(approval_request.response) %>"><%= approval_request.response || 'waiting for approval' %></span></td>
-              <td><%= approval_request.approver_comments || '-' %></td>
+              <th scope="col">Approver Name</th>
+              <th scope="col">Approver Email</th>
+              <th scope="col">Response</th>
+              <th scope="col">Comments</th>
             </tr>
-          <% end %>
-          </tbody>
-            <% else %>
-          <h6> No Approval Requests Found!</h6>
+            </thead>
+            <tbody>
+            <% @job_approval_requests.each do |approval_request| %>
+              <tr>
+                <td><%= approval_request.approver&.name || '-' %></td>
+                <td><%= approval_request.approver.email %></td>
+                <td><span class="badge text-bg-<%= status_badge(approval_request.response) %>"><%= approval_request.response || 'waiting for approval' %></span></td>
+                <td><%= approval_request.approver_comments || '-' %></td>
+              </tr>
+            <% end %>
+            </tbody>
+          <% else %>
+            <h6> No Approval Requests Found!</h6>
           <% end %>
         </table>
       </div>
@@ -150,14 +150,7 @@
             <% end %>
           </div>
         </div>
-
-        <% log_file_path = "log/#{@job_execution.id}_#{@job_execution.job_id}.log" %>
-        <% if File.exist?(log_file_path) %>
-          <div class="mb-3 row">
-            <div class="col-sm-3"><strong class="text-dark">Logs:</strong></div>
-            <div class="col-sm-9 terminal"><%= File.read(log_file_path) %></div>
-          </div>
-        <% end %>
+        <%= render partial: 'execution_log' %>
       </div>
     </div>
   </div>
