Refactored: Moved logs to a separate page

--- a/app/views/activejob/web/job_executions/show.html.erb
+++ b/app/views/activejob/web/job_executions/show.html.erb
@@ -60,6 +60,9 @@
               <% if @job_execution.cancelled? %>
                 <%= button_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');", class: 'btn btn-outline-primary'  %>
               <% end %>
+              <% if @job_execution.execution_started_at.present? %>
+                <%= button_to 'Logs',logs_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, class: 'btn btn-outline-info'  %>
+              <% end %>
             </div>
           </div>
         </div>
@@ -140,7 +143,6 @@
             <% end %>
           </div>
         </div>
-        <%= render partial: 'execution_log', locals: { job_execution: @job_execution } %>
       </div>
     </div>
   </div>
