--- a/app/views/activejob/web/jobs/index.html.erb
+++ b/app/views/activejob/web/jobs/index.html.erb
@@ -31,7 +31,7 @@
         <div class="card-body">
           <div class="row align-items-center">
             <div class="col-12">
-              <h5 class="text-muted fw-normal mt-0" title="Job Execution Requests">Job Execution Requests</h5>
+              <h5 class="text-muted fw-normal mt-0" title="Job Approval Requests">Job Approval Requests</h5>
               <h3 class="my-2 py-1"><%= Activejob::Web::JobApprovalRequest.count %></h3>
             </div>
           </div>
