--- a/app/views/activejob/web/job_executions/index.html.erb
+++ b/app/views/activejob/web/job_executions/index.html.erb
@@ -15,6 +15,9 @@
               <th scope="col">Comments</th>
               <th scope="col">Status</th>
               <th scope="col">Auto Execute On Approval</th>
+              <th scope="col">Approved</th>
+              <th scope="col">Rejected</th>
+              <th scope="col">Waiting for Approval</th>
               <th scope="col">Actions</th>
             </tr>
             <% @job_executions.each do |job_execution| %>
@@ -22,6 +25,10 @@
                 <td><%= job_execution.requestor_comments %></td>
                 <td><span class="badge text-bg-<%= status_badge(job_execution.status) %>"><%= job_execution.status %></span></td>
                 <td><%= job_execution.auto_execute_on_approval %></td>
+                <% total_count, approved_count, rejected_count = approval_request_details(job_execution) %>
+                <td><%= approved_count %></td>
+                <td><%= rejected_count %></td>
+                <td><%= total_count - approved_count - rejected_count %></td>
                 <td>
                   <%= link_to 'Edit', edit_activejob_web_job_job_execution_path(@job,job_execution), class: 'btn btn-outline-primary' %>
                   <%= link_to 'Show', activejob_web_job_job_execution_path(@job,job_execution), class: 'btn btn-outline-primary' %>
