--- a/app/views/activejob/web/job_executions/_execution_log.html.erb
+++ b/app/views/activejob/web/job_executions/_execution_log.html.erb
@@ -11,7 +11,22 @@
 <div class="mb-3 row">
   <% if job_execution.execution_started_at.present? %>
     <% if Activejob::Web.aws_credentials_present? %>
-      <div class="col-sm-12 terminal p-3"><%= fetch_log_events(job_execution) %></div>
+      <% log_events, previous_token, next_token = fetch_log_events(job_execution, page_token) %>
+      <% if log_events.present? %>
+        <div class="col-sm-12 terminal p-3"><%= log_events.join("\n") %></div>
+        <div class="col-sm-12 mt-2 d-flex justify-content-between">
+          <%= link_to 'Previous', logs_activejob_web_job_job_execution_path(job, job_execution, page_token: previous_token), class: 'btn btn-outline-primary btn-sm' if previous_token.present? %>
+          <%= link_to 'Next', logs_activejob_web_job_job_execution_path(job, job_execution, page_token: next_token, is_next: true), class: 'btn btn-outline-primary btn-sm' if next_token.present? %>
+        </div>
+      <% else %>
+        <div class="col-sm-12">
+          <h6>No logs found!</h6>
+          <div class="col-sm-12 mt-2 d-flex justify-content-between">
+            <%= link_to 'Previous', logs_activejob_web_job_job_execution_path(job, job_execution, page_token: previous_token), class: 'btn btn-outline-primary btn-sm' if previous_token.present? && (is_next == true) %>
+            <%= link_to 'Next', logs_activejob_web_job_job_execution_path(job, job_execution, page_token: next_token), class: 'btn btn-outline-primary btn-sm' if next_token.present? %>
+          </div>
+        </div>
+      <% end %>
     <% else %>
       <% log_file_path = "log/#{job_execution.id}_#{job_execution.job_id}.log" %>
       <% if File.exist?(log_file_path) %>
