--- a/app/views/activejob/web/job_executions/logs.html.erb
+++ b/app/views/activejob/web/job_executions/logs.html.erb
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="card-body p-3">
-        <%= render partial: 'execution_log', locals: { job: @job, job_execution: @job_execution, page_token: params['page_token'], is_next: params['is_next'] } %>
+        <%= render partial: 'execution_log', locals: { job: @job, job_execution: @job_execution, page_token: params['page_token'] } %>
       </div>
     </div>
   </div>
