--- a/lib/generators/activejob/web/templates/migrations/create_join_table_job_executors.html.erb
+++ b/lib/generators/activejob/web/templates/migrations/create_join_table_job_executors.html.erb
@@ -1,6 +1,6 @@
 # frozen_string_literal: true
 
-class CreateJoinTableJobExecutors < ActiveRecord::Migration[7.0]
+class CreateJoinTableJobExecutors < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :activejob_web_job_executors, id: false do |t|
       t.column :job_id, :uuid
