--- a/lib/generators/activejob/web/templates/migrations/create_active_storage_tables.active_storage.html.erb
+++ b/lib/generators/activejob/web/templates/migrations/create_active_storage_tables.active_storage.html.erb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 # This migration comes from active_storage (originally 20170806125915)
-class CreateActiveStorageTables < ActiveRecord::Migration[7.0]
+class CreateActiveStorageTables < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     primary_key_type, foreign_key_type = primary_and_foreign_key_types
     unless table_exists?(:active_storage_blobs)
